--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@angular/platform-browser-dynamic": "^10.1.0",
     "@angular/router": "^10.1.0",
     "@nrwl/angular": "10.3.1",
+    "bootstrap": "4.1.1",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^6.1.0",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
   },
